# geoutils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assimp_info.sh  conandata.yml  conanfile.py  create_test_osm_file.py  export_london.sh  test.bats  test.py  vcpkg.json
ext/: common.cpp  common.h  common_using.h  delaunator.hpp  tinyformat.h
ext/openssl/: README.md
ext/pnghpp/: COPYING  convert_color_space.hpp  end_info.hpp  error.hpp  image.hpp  info.hpp  info_base.hpp  io_base.hpp  io_transform.hpp  pixel_buffer.hpp  pixel_traits.hpp  png.hpp  reader.hpp  require_color_space.hpp  rgb_pixel.hpp  rgba_pixel.hpp  types.hpp  writer.hpp
osm2assimp/: a.out  assimp_construct.cpp  assimp_construct.h  assimpconstruct.cpp  assimpconstruct.h  assimpwriter.cpp  assimpwriter.h  centerearthfixedconvert.cpp  centerearthfixedconvert.h  common_geo.h  convertlatlng.cpp  convertlatlng.h  eigenconversion.cpp  eigenconversion.h  geomconvert.cpp  geomconvert.h  geometry.cpp  geometry.h  ground.cpp  ground.h  london_extents.txt  main.cpp  osmdata.cpp  osmdata.h  osmfeature.cpp  osmfeature.h  polygon.h  sceneconstruct.cpp  sceneconstruct.h  test.cpp  testtrig.cpp  utils.cpp  utils.h  viewfilter.cpp  viewfilter.h
osms2split/: .gitignore
osms2split/src/: main.cpp  s2splitter.cpp  s2splitter.h
osmsplit/: main.cpp  main.h  mapsplit.h  maptest.cpp  osmsplitconfig.cpp  osmsplitconfig.h  osmsplitwriter.cpp  osmsplitwriter.h
s2util/: main.cpp  s2util.h
